<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="App1">SPOTIFY STREAMER</string>
    <string name="App2">SCORES APP</string>
    <string name="App3">LIBRARY APP</string>
    <string name="App4">BUILD IT BIGGER</string>
    <string name="App5">XYZ READER</string>
    <string name="App6">CAPSTONE: MY OWN APP</string>

</resources>
