<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff108008">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="MY NANODEGREE APPS"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="#fff6f9ff" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/App1"
        android:id="@+id/spotifystreamer"
        android:layout_marginTop="20dp"
        android:background="@color/appeti_dark_green"
        android:textColor="@color/appeti_bright_yellow"
        android:textSize="25sp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/App2"
        android:id="@+id/scoresapp"
        android:layout_marginTop="20dp"
        android:background="@color/appeti_dark_green"
        android:textColor="@color/appeti_bright_yellow"
        android:textSize="25sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/App3"
        android:id="@+id/library"
        android:layout_marginTop="20dp"
        android:background="@color/appeti_dark_green"
        android:textColor="@color/appeti_bright_yellow"
        android:textSize="25sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/App4"
        android:id="@+id/builditbigger"
        android:layout_marginTop="20dp"
        android:background="@color/appeti_dark_green"
        android:textColor="@color/appeti_bright_yellow"
        android:textSize="25sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/App5"
        android:id="@+id/xyzreader"
        android:layout_marginTop="20dp"
        android:background="@color/appeti_dark_green"
        android:textColor="@color/appeti_bright_yellow"
        android:textSize="25sp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/App6"
        android:id="@+id/capstone"
        android:layout_marginTop="20dp"
        android:background="@color/appeti_dark_green"
        android:textColor="@color/appeti_bright_yellow"
        android:textSize="25sp" />

</LinearLayout>
